@@ -82,6 +82,9 @@ Bug Fixes
 * SOLR-4590: Collections API should return a nice error when not in SolrCloud mode.
   (Anshum Gupta, Mark Miller)
 
+* SOLR-5295: The CREATESHARD collection API creates maxShardsPerNode number of
+  replicas if replicationFactor is not specified. (Brett Hoerner, shalin)
+
 Security
 ----------------------
 
